File Name: CHANGES

07/10/2014 FASP 1.5.5:
- Modify the parameter for pairwise aggregation.
- Fix warnings for data type REAL in sparse_bsr.c
- Update results of the regression test.
- Add block preconditioners for MHD.
- Update block preconditioners.

06/20/2014 FASP 1.5.4:
- Fix a bug in io.c.
- Fix incompability in Windows VC++/IC++: mkheaders.awk reverted to the previous version.
- Fix a bug in aggregation_csr.inl for OpenMP.
- Fix a bug in smat.c for 4X4 matrix inversion. 
- Fix a bug in BSR_COO output function.
- Fix a bug in OpenMP in AMG direct interpolation. 
- Fix VS10 setting for OpenMP.
- When using FASP function in CPP file, now need to use extern "C". 
- Update Windows VS10 solution: Updated to Intel C++ 14.0.3.
- Update regression test results. 

06/08/2014 FASP 1.5.3:
- Add Smoothed Aggregation AMG for BSR format.
- Add solver for linear elasiticy (under development).
- Add subroutines for read in and write HB format files.
- Change some macros to prevent confliction with MPI.h.
- Change macros accordingly for interfaces and other FASP projects.
- Fix a bug in tutorial when using AMG as a solver.
- Fix a bug in SPE1 tutorial example.
- Fix a bug in mkheaders.awk which cause incompatible linkage with cpp.
- Fix a few Doxygen problems. 
- Update documentation and website.

05/27/2014 FASP 1.5.2:
- Update some more 'char *' to 'const char *'.
- Fix BiCGstab divided by zero problem.
- Fix pairwise aggregation core dumped bug caused by number of passes.
- Fix a '}' caused by openmp parallelization in smooth_agg subroutine.
- Fix a potential memory bug in multipass pairwise aggregation.
- Adjust default parameters slightly.
- Update webpage.

05/17/2014 FASP 1.5.1:
- Seperate factorization and solve for UMFpack.
- Add sweeping preconditioner.
- Fix a few compiler warnings recently introduced.
- Fix VS08 and VS10 solutions and prepare to test new code in BlkOil.
- Fix a bug in BCSR mat-vec multiplication.